smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/version-empty-segment.smithy
// Invalid Smithy version number: 1..1
$version: "1..1"
